[gd_scene load_steps=15 format=3 uid="uid://c0xt0igq4juul"]

[ext_resource type="PackedScene" uid="uid://dsdg7jp6jutb0" path="res://Assets/Door.tscn" id="1_n82xg"]
[ext_resource type="Script" path="res://Scripts/Levels/level_002.gd" id="1_qpf87"]
[ext_resource type="PackedScene" uid="uid://b6t105hqhi2q2" path="res://Locks/pickable_hole.tscn" id="2_tu6fo"]
[ext_resource type="PackedScene" uid="uid://sbwjcysciyu3" path="res://Assets/Pickable.tscn" id="3_w6xiw"]

[sub_resource type="PlaneMesh" id="PlaneMesh_cniu3"]
size = Vector2(5, 5)

[sub_resource type="PlaneMesh" id="PlaneMesh_3t30r"]
lightmap_size_hint = Vector2i(27, 27)
flip_faces = true
size = Vector2(5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_yxsds"]
size = Vector3(1, 2.8, 5)

[sub_resource type="BoxMesh" id="BoxMesh_hxahk"]
size = Vector3(2.5, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_sq3un"]
size = Vector3(5, 0.2, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_jfphd"]
size = Vector3(1, 2.8, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_7o583"]
size = Vector3(5, 2.8, 1.29609)

[sub_resource type="BoxShape3D" id="BoxShape3D_t78ig"]
size = Vector3(2.07756, 2.8, 0.741)

[sub_resource type="BoxShape3D" id="BoxShape3D_fxumc"]
size = Vector3(0.644161, 2.8, 0.460706)

[sub_resource type="BoxShape3D" id="BoxShape3D_k1dyo"]
size = Vector3(1.90047, 3.03035, 1.05653)

[node name="Level002" type="Node3D"]
script = ExtResource("1_qpf87")

[node name="Walls" type="Node3D" parent="."]

[node name="Meshes" type="Node3D" parent="Walls"]

[node name="GND" type="MeshInstance3D" parent="Walls/Meshes"]
mesh = SubResource("PlaneMesh_cniu3")
skeleton = NodePath("../..")

[node name="Roof" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 0)
mesh = SubResource("PlaneMesh_3t30r")
skeleton = NodePath("../..")

[node name="Right1" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.97461, 1.4094, 2.12405)
mesh = SubResource("BoxMesh_yxsds")
skeleton = NodePath("../..")

[node name="left" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.95217, 1.4094, 0)
mesh = SubResource("BoxMesh_yxsds")
skeleton = NodePath("../..")

[node name="in" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.022015, 1.4094, -2.90542)
mesh = SubResource("BoxMesh_yxsds")
skeleton = NodePath("../..")

[node name="out" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.80469, 1.4094, 2.12423)
mesh = SubResource("BoxMesh_yxsds")
skeleton = NodePath("../..")

[node name="out2" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.2397, 1.4094, 2.12423)
mesh = SubResource("BoxMesh_yxsds")
skeleton = NodePath("../..")

[node name="NoNameIn" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.692609, 3.0078, 2.12314)
mesh = SubResource("BoxMesh_hxahk")
skeleton = NodePath("../..")

[node name="NoNameOut" type="MeshInstance3D" parent="Walls/Meshes"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.97743, 3.0078, -1.18806)
mesh = SubResource("BoxMesh_hxahk")
skeleton = NodePath("../..")

[node name="Hitbox" type="Node3D" parent="Walls"]

[node name="StaticBody3D" type="StaticBody3D" parent="Walls/Hitbox"]

[node name="GND" type="CollisionShape3D" parent="Walls/Hitbox/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0882971, 0)
shape = SubResource("BoxShape3D_sq3un")

[node name="Right" type="CollisionShape3D" parent="Walls/Hitbox/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.95676, 1.38698, 2.25114)
shape = SubResource("BoxShape3D_jfphd")

[node name="Left" type="CollisionShape3D" parent="Walls/Hitbox/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.91678, 1.38698, 0)
shape = SubResource("BoxShape3D_jfphd")

[node name="Back" type="CollisionShape3D" parent="Walls/Hitbox/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38329, -3.03367)
shape = SubResource("BoxShape3D_7o583")

[node name="Front" type="CollisionShape3D" parent="Walls/Hitbox/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35204, 1.46032, 1.94428)
shape = SubResource("BoxShape3D_t78ig")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/Hitbox/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.91929, 1.65256, 1.70214)
shape = SubResource("BoxShape3D_fxumc")

[node name="Objects" type="Node3D" parent="."]

[node name="Door" parent="Objects" instance=ExtResource("1_n82xg")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.40974, 1.26666, -1.33838)

[node name="DoorIn" parent="Objects" instance=ExtResource("1_n82xg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.686333, 1.26666, 2.54622)

[node name="pickableHole" parent="Objects" node_paths=PackedStringArray("player") instance=ExtResource("2_tu6fo")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.6973, 1.66123, -2.28777)
player = NodePath("")

[node name="Pickable" parent="Objects" instance=ExtResource("3_w6xiw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.34869, 0.560575, 0)

[node name="Areas" type="Node3D" parent="."]

[node name="PlayerOpenDoor" type="Area3D" parent="Areas"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/PlayerOpenDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.841528, 0.846483, 2.89703)
shape = SubResource("BoxShape3D_k1dyo")

[connection signal="pickable_in" from="Objects/pickableHole" to="." method="_on_pickable_hole_pickable_in"]
[connection signal="body_entered" from="Areas/PlayerOpenDoor" to="." method="_on_player_open_door_body_entered"]
[connection signal="body_exited" from="Areas/PlayerOpenDoor" to="." method="_on_player_open_door_body_exited"]
